unpackaged/main/default/objects/Awards__c/fields/Award_Information__c.field-meta.xml
<CustomField>
    <fullName>Award_Information__c</fullName>
    <label>Award Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>