unpackaged/main/default/objects/Awards__c/fields/Award_POC__c.field-meta.xml
<CustomField>
    <fullName>Award_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>