unpackaged/main/default/objects/Awards__c/fields/Purpose_of_Award__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Award__c</fullName>
    <label>Purpose of Award</label>
    <type>TextArea</type>
</CustomField>